[refs #99649] Partners logos in footer: fix size bug on IE.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/copernicusLand.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/copernicusLand.css
@@ -1045,3 +1045,7 @@ h2 {
 .portlet-static-partners .partners-logos {
   margin-left: 0px;
 }
+
+div.partners-banners ul.partners-logos img {
+  max-width: 200px;
+}
